--- a/.github/workflows/test_deploy.yml
+++ b/.github/workflows/test_deploy.yml
@@ -46,6 +46,18 @@ jobs:
       - name: Grant execute permission for gradlew
         run: chmod +x gradlew
 
+      - name: Decode keystore
+        run: |
+          mkdir -p keystore
+          echo "${{ secrets.KEYSTORE_BASE64 }}" | base64 --decode > keystore/release-key.jks
+
+      - name: Create keystore.properties
+        run: |
+          echo "storePassword=${{ secrets.KEYSTORE_PASSWORD }}" > keystore/keystore.properties
+          echo "keyPassword=${{ secrets.KEY_PASSWORD }}" >> keystore/keystore.properties
+          echo "keyAlias=${{ secrets.KEY_ALIAS }}" >> keystore/keystore.properties
+          echo "storeFile=keystore/release-key.jks" >> keystore/keystore.properties
+
       # This step builds the Android app using Gradle.
       - name: Build selected flavor
         run: |
