--- a/.github/workflows/test_deploy.yml
+++ b/.github/workflows/test_deploy.yml
@@ -51,12 +51,12 @@ jobs:
           mkdir -p keystore
           echo "${{ secrets.KEYSTORE_BASE64 }}" | base64 --decode > keystore/release-key.jks
 
-      - name: Create keystore.properties
+      - name: Setup local.properties
         run: |
-          echo "storePassword=${{ secrets.KEYSTORE_PASSWORD }}" > keystore/keystore.properties
-          echo "keyPassword=${{ secrets.KEY_PASSWORD }}" >> keystore/keystore.properties
-          echo "keyAlias=${{ secrets.KEY_ALIAS }}" >> keystore/keystore.properties
-          echo "storeFile=keystore/release-key.jks" >> keystore/keystore.properties
+          echo "storePassword=${{ secrets.KEYSTORE_PASSWORD }}" > local.properties
+          echo "keyPassword=${{ secrets.KEY_PASSWORD }}" >> local.properties
+          echo "keyAlias=${{ secrets.KEY_ALIAS }}" >> local.properties
+          echo "storeFile=keystore/release-key.jks" >> local.properties
 
       # This step builds the Android app using Gradle.
       - name: Build selected flavor
